# xauxi

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  TODO  TODO.md  build.sh  buildconf.sh  configure.in  distcheck.sh  download.sh  generic.sh  index.html  params.json  redhat.sh  setup.sh  stage.sh  test.lua  ubuntu.sh
config/: config.sh
doc/: desgin.txt  exception.lua  idea.txt  idea1.lua  idea2.lua  idea3.lua  name_based_hosts.lua  xauxi.lua
doc/manual/: README.md
examples/: simple.lua
lib/: Makefile.am  Serialize.lua  XauxiEngine.lua  XauxiSession.lua  connection.lua  http.lua  proxy.lua  queue.lua  request.lua  xauxiCore.lua
lib/plugin/: session.lua
lib/xauxi/: agent.lua  backend.lua  cookie.lua  debugger.lua  engine.lua  ha.lua  info.lua  route.lua  serialize.lua  session.lua
server/content/conf/: server.lua  xauxi.lua  xauxi.template.lua
server/proxy/conf/: .gitignore  ca.cert.pem  server.cert.pem  server.key.pem  xauxi.lua  xauxi.template.lua
server/simple/conf/: .xauxi.lua.swp  xauxi.lua  xauxi.template.lua
src/: Makefile  Makefile.am  Makefile.in  Xauxi.cpp  Xauxi.h  main.cpp  xauxi.c  xauxi_appender.c  xauxi_appender.h  xauxi_appender_log.c  xauxi_appender_log.h  xauxi_bufreader.c  xauxi_bufreader.h  xauxi_connection.c  xauxi_connection.h  xauxi_dispatcher.c  xauxi_dispatcher.h  xauxi_event.c  xauxi_event.h  xauxi_global.c  xauxi_global.h  xauxi_listener.c  xauxi_listener.h  xauxi_logger.c  xauxi_logger.h  xauxi_object.h
test/: .gitignore  Makefile.am  base.htb  connection.lua  get_body_rewrite.htt  get_keep_alive_frontend.htt  get_no_found.htt  get_request.htt  get_server_error.htt  http.lua  keepalive.htt  lua_unit.c  post_body_rewrite.htt  post_body_rewrite_keep_alive.htt  post_request.htt  proxy.htt  proxy_post.htt  request.lua  restart.sh  run.lua  run.sh  run_httest.sh  run_integration.sh  run_lib.sh  run_unit.sh  send_receive.htt  simple.htt  simple_concurrent.htt  start.sh  stop.sh  test_dispatcher.c  test_event.c  test_session.lua
test/conf/: simple.lua  xauxi.lua  xauxi2.lua
test/integration/: get_huge.htt  get_keep_alive_frontend.htt  get_luanod_huge.htt  get_luanod_huge_keep_alive.htt  get_other_proxy_host.htt  get_request.htt  get_request_balanced.htt  get_request_balanced_with_session.htt  get_server_error.htt  get_session_cookie.htt  get_session_data_in_header.htt  get_ssl_backend.htt  get_ssl_not_found.htt  get_ssl_server_error.htt  post_body_rewrite.htt  post_body_rewrite_keep_alive.htt
test/performance/: test_get_huge_from_backend.htt
test/proxy/conf/: xauxi.lua
test/simple/conf/: http.lua  xauxi.lua
test/unit/: test_cookie.lua  test_plugin_session.lua  test_route.lua  test_serializer.lua  test_session.lua
