# $Id: Makefile.am,v 1.14 2009/03/16 21:38:37 ia97lies Exp $

bin_PROGRAMS=xauxi

xauxi_SOURCES= \
	GLDebugDrawer.cpp GLDebugFont.cpp GL_ShapeDrawer.cpp GlutStuff.cpp DemoApplication.cpp GlutDemoApplication.cpp Xauxi.cpp main.cpp

noinst_HEADERS= \
	GLDebugDrawer.h GLDebugFont.h GL_ShapeDrawer.h GlutStuff.h DemoApplication.h GlutDemoApplication.h Xauxi.h
