# $Id: Makefile.am,v 1.14 2009/03/16 21:38:37 ia97lies Exp $

bin_PROGRAMS=xauxi

xauxi_SOURCES= \
	xauxi.c \
	xauxi_event.c \
	xauxi_logger.c \
	xauxi_appender.c \
	xauxi_appender_log.c \
	xauxi_dispatcher.c \
	xauxi_connection.c

noinst_HEADERS = \
	xauxi_event.h \
	xauxi_logger.h \
	xauxi_appender_log.h \
	xauxi_appender.h \
	xauxi_dispatcher.h \
	xauxi_object.h \
	xauxi_connection.h

